@@ -173,9 +173,10 @@
 
   ;; returns (LABEL-STRING . TOOLTIP-STRING-OR-NIL)
   (define (tooltip-split doc)
+    (setq doc (_ doc))
     (if (string-match "\n\n\\s*" doc)
-	(cons (utf8-substring (_ doc) 0 (match-start))
-	      (utf8-substring (_ doc) (match-end)))
+	(cons (utf8-substring doc 0 (match-start))
+	      (utf8-substring doc (match-end)))
       (cons doc nil)))
 
   (define (tooltip-set widget tip-string #!optional (key "Foo"))
