@@ -34,6 +34,10 @@ they occurred between. For more detailed information see the
 @item Fixed group of the stagger options [Christopher Bratusek]
 
 @item Fixed repexecdir definition in the spec-file [Christopher Bratusek]
+
+@item Fixed wrong call of make-pot in po/Makefile.in [Christopher Bratusek]
+
+@item Fixed issue with translated tooltip strings [Teika Kazura]
 @end itemize
 @item New features:
 @itemize @minus
