@@ -14,6 +14,8 @@
 
 	* po/Makefile.in: fixed call of make-pot
 
+	* lisp/sawfish/gtk/widget.jl: fixed issue with translated tooltip strings [Teika Kazura]
+
 2009-08-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl: move rename-window here, as it requires prompt but this either does not 
 	                                       load properly in windows.jl or breaks sawfish-ui if require'ed instead of open'ed
